--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,13 +4,17 @@
   "main": "src/server.ts",
   "license": "MIT",
   "scripts": {
-    "start": "tsnd --ignore node_modules --transpile-only --no-notify --respawn src/server.ts"
+    "dev": "tsnd --transpile-only --ignore-watch node_modules --respawn --no-notify src/server.ts",
+    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.21.2",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "ts-node-dev": "^1.0.0-pre.52"
   }
