--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "start:web": "yarn workspace @proffy/web start",
+    "start:server": "yarn workspace @proffy/server start",
+    "start:mobile": "yarn workspace @proffy/mobile start",
     "test": "jest",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./",
     "fix": "eslint --ext .js,.jsx,.ts,.tsx  --fix ./"
