--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
+    "multer": "^1.4.2",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.3",
     "ts-node-dev": "^1.0.0-pre.52"
   }
 }
