--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,10 +13,12 @@
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-select": "^3.0.16",
     "@types/styled-components": "^5.1.2"
   },
   "scripts": {
