--- a/repo.config.json
+++ b/repo.config.json
@@ -2,7 +2,7 @@
   "project_name": "Proffy",
   "type": "Fullstack",
   
-  "template_url": "./.github/logo.png",
+  "template_url": "./.github/Capa.png",
   "logo_url": "./.github/logo.png",
 
 
